added audio files

--- a/scripts/llm_to_audio.ipynb
+++ b/scripts/llm_to_audio.ipynb
@@ -460,7 +460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "phd",
    "language": "python",
    "name": "python3"
   },
