--- a/llm_audio_testcase/stats/kl_leibler_divergence.ipynb
+++ b/llm_audio_testcase/stats/kl_leibler_divergence.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "'/Users/liamroy/Documents/Studies/Monash_31194990/PHD/Studies/Study_03/LLM_motion/llm_audio_testcase/stats'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now lets do a weighted Kullback-Leibler (KL) Divergence\n",
+    "## ARCHIVE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Here, we use the same approach but with weights that reflect the importance of each parameter.\n",
     "\n",
     "In our prior work, we conducted an anlysis on the influence of each parameter with regards to participants perception of a given sound. This analysis revealed a non-uniform parameter effects.\n",
@@ -258,70 +264,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[25.   2.5 25. ]\n",
+      "  [10.   1.  10. ]\n",
+      "  [25.   2.5 25. ]]\n",
+      "\n",
+      " [[25.   2.5 25. ]\n",
+      "  [10.   1.  10. ]\n",
+      "  [25.   2.5 25. ]]\n",
+      "\n",
+      " [[25.   2.5 25. ]\n",
+      "  [10.   1.  10. ]\n",
+      "  [25.   2.5 25. ]]]\n"
+     ]
+    }
+   ],
    "source": [
     "# WEIGHTS USED\n",
     "\n",
     "bpm_weight = 1\n",
-    "bpl_weight = 3\n",
-    "pitchbend_weight = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bpl_weight = 2.5\n",
+    "pitchbend_weight = 10\n",
+    "\n",
     "weights = np.ones((3, 3, 3))\n",
     "\n",
-    "# Multiply the left column (index 0) and the right column (index 2) by 5\n",
+    "weights[0, :, :] *= bpm_weight \n",
+    "weights[2, :, :] *= bpm_weight \n",
     "\n",
-    "weights[0, :, :] *= bpm_weight  # Left column\n",
-    "weights[2, :, :] *= bpm_weight  # Right column\n",
+    "weights[:, 0, :] *= bpl_weight  \n",
+    "weights[:, 2, :] *= bpl_weight  \n",
     "\n",
-    "weights[:, 0, :] *= bpl_weight  # Left column\n",
-    "weights[:, 2, :] *= bpl_weight  # Right column\n",
+    "weights[:, :, 0] *= pitchbend_weight  \n",
+    "weights[:, :, 2] *= pitchbend_weight \n",
     "\n",
-    "weights[:, :, 0] *= pitchbend_weight  # Left column\n",
-    "weights[:, :, 2] *= pitchbend_weight  # Right column"
+    "print(weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[30.,  3., 30.],\n",
-       "        [10.,  1., 10.],\n",
-       "        [30.,  3., 30.]],\n",
-       "\n",
-       "       [[30.,  3., 30.],\n",
-       "        [10.,  1., 10.],\n",
-       "        [30.,  3., 30.]],\n",
-       "\n",
-       "       [[30.,  3., 30.],\n",
-       "        [10.,  1., 10.],\n",
-       "        [30.,  3., 30.]]])"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -356,18 +343,8 @@
       " [[1 0 0]\n",
       "  [0 0 0]\n",
       "  [5 0 0]]]\n",
-      "llm_prob [0.87711864 0.         0.         0.00847458 0.         0.\n",
-      " 0.11440678 0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.        ]\n",
-      "human_prob [0.40118871 0.00445765 0.         0.01485884 0.         0.\n",
-      " 0.17830609 0.         0.         0.08915305 0.         0.\n",
-      " 0.         0.         0.         0.04457652 0.         0.\n",
-      " 0.04457652 0.         0.         0.         0.         0.\n",
-      " 0.22288262 0.         0.        ]\n",
       "\n",
-      " >>> Weighted KL Divergence for the state stuck is: 0.631\n",
+      " >>> Weighted KL Divergence for the state stuck is: 0.630\n",
       "\n",
       "\n",
       "\n",
@@ -397,18 +374,8 @@
       " [[0 0 2]\n",
       "  [0 0 5]\n",
       "  [1 1 2]]]\n",
-      "llm_prob [0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.03571429\n",
-      " 0.         0.         0.14285714 0.         0.         0.58928571\n",
-      " 0.         0.         0.         0.         0.         0.07142857\n",
-      " 0.         0.         0.16071429]\n",
-      "human_prob [0.         0.         0.19693654 0.         0.00218818 0.04376368\n",
-      " 0.         0.00656455 0.06564551 0.         0.         0.13129103\n",
-      " 0.         0.         0.04376368 0.         0.         0.06564551\n",
-      " 0.         0.         0.13129103 0.         0.         0.10940919\n",
-      " 0.06564551 0.00656455 0.13129103]\n",
       "\n",
-      " >>> Weighted KL Divergence for the state accomplished is: 1.418\n",
+      " >>> Weighted KL Divergence for the state accomplished is: 1.383\n",
       "\n",
       "\n",
       "\n",
@@ -438,18 +405,8 @@
       " [[0 5 0]\n",
       "  [0 1 0]\n",
       "  [0 2 0]]]\n",
-      "llm_prob [0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.00255754 0.99744246 0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.        ]\n",
-      "human_prob [0.         0.12711864 0.25423729 0.         0.01694915 0.\n",
-      " 0.         0.02542373 0.25423729 0.         0.12711864 0.\n",
-      " 0.         0.00847458 0.         0.         0.         0.\n",
-      " 0.         0.12711864 0.         0.         0.00847458 0.\n",
-      " 0.         0.05084746 0.        ]\n",
       "\n",
-      " >>> Weighted KL Divergence for the state progressing is: 20.665\n",
+      " >>> Weighted KL Divergence for the state progressing is: 20.664\n",
       "\n"
      ]
     }
