--- a/llm_audio_testcase/stats/kl_leibler_divergence.ipynb
+++ b/llm_audio_testcase/stats/kl_leibler_divergence.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -213,24 +213,21 @@
      "text": [
       "\n",
       "\n",
-      "@@@@@@@@@@@@@@@ Jensen-Shannon Distance For State: stuck @@@@@@@@@@@@@@@\n",
+      "@@@ Jensen-Shannon Distance Betweem LLM-Generated Audio State 'stuck' and Human After RL Learning @@@\n",
       "\n",
-      "\n",
-      " >>> Jensen-Shannon Distance for the state stuck is: 0.444\n",
-      "\n",
-      "\n",
-      "\n",
-      "@@@@@@@@@@@@@@@ Jensen-Shannon Distance For State: accomplished @@@@@@@@@@@@@@@\n",
-      "\n",
-      "\n",
-      " >>> Jensen-Shannon Distance for the state accomplished is: 0.553\n",
+      ">>> Jensen-Shannon Distance for the state stuck is: 0.444\n",
       "\n",
       "\n",
       "\n",
-      "@@@@@@@@@@@@@@@ Jensen-Shannon Distance For State: progressing @@@@@@@@@@@@@@@\n",
+      "@@@ Jensen-Shannon Distance Betweem LLM-Generated Audio State 'accomplished' and Human After RL Learning @@@\n",
+      "\n",
+      ">>> Jensen-Shannon Distance for the state accomplished is: 0.553\n",
       "\n",
       "\n",
-      " >>> Jensen-Shannon Distance for the state progressing is: 0.819\n",
+      "\n",
+      "@@@ Jensen-Shannon Distance Betweem LLM-Generated Audio State 'progressing' and Human After RL Learning @@@\n",
+      "\n",
+      ">>> Jensen-Shannon Distance for the state progressing is: 0.819\n",
       "\n"
      ]
     }
@@ -260,10 +257,6 @@
     "        x, y, z = row  # Unpack the three-vector (each value will be 0, 1, or 2)\n",
     "        llm_data_histogram[x, y, z] += 1\n",
     "\n",
-    "    # print(f\"LLM DATA |3x3x3 Histogram Matrix for {state}:\")\n",
-    "    # print(llm_data_histogram)\n",
-    "\n",
-    "\n",
     "    # THEN DO HUMAN COND:\n",
     "    # Load the data from the Excel file, specifying the sheet name\n",
     "    human_file_path = './../llm_audio_rawdata.xlsx'  # Replace with your file path\n",
@@ -286,8 +279,10 @@
     "        x, y, z = row  # Unpack the three-vector (each value will be 0, 1, or 2)\n",
     "        human_data_histogram[x, y, z] += 1\n",
     "\n",
-    "    # print(f\"HUMAN DATA | 3x3x3 Histogram Matrix for {state}:\")\n",
-    "    # print(human_data_histogram)\n",
+    "\n",
+    "    # PRINT SANITY CHECK\n",
+    "    # print(\"llm_data_histogram:\\n\", llm_data_histogram)\n",
+    "    # print(\"human_data_histogram:\\n\", human_data_histogram)\n",
     "\n",
     "\n",
     "    # Then, flatten each 3x3x3 matrix into a 1D vector of length 27\n",
@@ -304,18 +299,103 @@
     "    llm_prob_smooth = np.where(llm_prob == 0, 1e-9, llm_prob)\n",
     "    human_prob_smooth = np.where(human_prob == 0, 1e-9, human_prob)  \n",
     "    \n",
-    "    print(f\"\\n\\n@@@@@@@@@@@@@@@ Jensen-Shannon Distance For State: {state} @@@@@@@@@@@@@@@\\n\")\n",
+    "    print(f\"\\n\\n@@@ Jensen-Shannon Distance Betweem LLM-Generated Audio State '{state}' and Human After RL Learning @@@\\n\")\n",
     "\n",
     "    JS_distance = jensen_shannon_distance(llm_prob_smooth, human_prob_smooth)\n",
-    "    print(f\"\\n >>> Jensen-Shannon Distance for the state {state} is: {JS_distance:.3f}\\n\")\n"
+    "    print(f\">>> Jensen-Shannon Distance for the state {state} is: {JS_distance:.3f}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finally, Jensen-Shannon Distance for LLM-Audio and Uniform Distribution\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "@@@ Jensen-Shannon Distance Betweem LLM-Generated Audio State 'stuck' and Uniform Distribution @@@\n",
+      "\n",
+      ">>> Jensen-Shannon Distance for the state stuck is: 0.833\n",
+      "\n",
+      "\n",
+      "\n",
+      "@@@ Jensen-Shannon Distance Betweem LLM-Generated Audio State 'accomplished' and Uniform Distribution @@@\n",
+      "\n",
+      ">>> Jensen-Shannon Distance for the state accomplished is: 0.833\n",
+      "\n",
+      "\n",
+      "\n",
+      "@@@ Jensen-Shannon Distance Betweem LLM-Generated Audio State 'progressing' and Uniform Distribution @@@\n",
+      "\n",
+      ">>> Jensen-Shannon Distance for the state progressing is: 0.819\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for state in states:\n",
+    "\n",
+    "    # FIRST DO LLM COND:\n",
+    "    # Load the data from the Excel file, specifying the sheet name\n",
+    "    llm_file_path = './../llm_audio_rawdata.xlsx'  # Replace with your file path\n",
+    "    llm_data = pd.read_excel(llm_file_path,sheet_name='llm_' + state + '_00', usecols=\"D:F\", nrows=80)\n",
+    "\n",
+    "    mapping = {'A': 0, 'B': 1, 'C': 2}\n",
+    "    llm_data = llm_data.replace(mapping).infer_objects()\n",
+    "\n",
+    "    # Convert data to numeric values, coercing errors (e.g., empty cells or non-numeric text will become NaN)\n",
+    "    llm_data = llm_data.apply(pd.to_numeric, errors='coerce').fillna(0).astype(int)\n",
+    "\n",
+    "    # Ensure the data values are between 0 and 2 as required\n",
+    "    assert llm_data.values.max() <= 2 and llm_data.values.min() >= 0, \"Values out of range (0, 1, 2)\"\n",
+    "\n",
+    "    # Initialize a 3x3x3 numpy array to hold the histogram counts\n",
+    "    llm_data_histogram = np.zeros((3, 3, 3), dtype=int)\n",
+    "\n",
+    "    # Iterate through each row in the DataFrame and bin the data\n",
+    "    for row in llm_data.itertuples(index=False):\n",
+    "        x, y, z = row  # Unpack the three-vector (each value will be 0, 1, or 2)\n",
+    "        llm_data_histogram[x, y, z] += 1\n",
+    "\n",
+    "    # THEN CREATE A UNIFORM DISTRIBUTION:\n",
+    "    # Load the data from the Excel file, specifying the sheet name\n",
+    "    uniform_histogram = np.ones((3, 3, 3), dtype=int)\n",
+    "        \n",
+    "\n",
+    "    # PRINT SANITY CHECK\n",
+    "    # print(\"llm_data_histogram:\\n\", llm_data_histogram)\n",
+    "    # print(\"uniform_histogram:\\n\", uniform_histogram)\n",
+    "\n",
+    "\n",
+    "    # Then, flatten each 3x3x3 matrix into a 1D vector of length 27\n",
+    "    llm_vector = llm_data_histogram.flatten()\n",
+    "    uniform_vector = uniform_histogram.flatten()\n",
+    "\n",
+    "    # Then, convert to probability distributions. Since KL Divergence operates on \n",
+    "    # probability distributions, normalize each vector so that the sum of its elements is 1\n",
+    "    llm_prob = normalize(llm_vector) \n",
+    "    uniform_prob = normalize(uniform_vector)\n",
+    "\n",
+    "    # Next, add smoothing. Since some bins in B_prob are zero, add a small \n",
+    "    # smoothing value (1e−9) to avoid division by zero in the KL Divergence calculation\n",
+    "    llm_prob_smooth = np.where(llm_prob == 0, 1e-9, llm_prob)\n",
+    "    uniform_prob_smooth = np.where(uniform_prob == 0, 1e-9, uniform_prob)  \n",
+    "\n",
+    "    print(f\"\\n\\n@@@ Jensen-Shannon Distance Betweem LLM-Generated Audio State '{state}' and Uniform Distribution @@@\\n\")\n",
+    "\n",
+    "    JS_distance = jensen_shannon_distance(llm_prob_smooth, human_prob_smooth)\n",
+    "    print(f\">>> Jensen-Shannon Distance for the state {state} is: {JS_distance:.3f}\\n\")\n"
+   ]
   }
  ],
  "metadata": {
